# Py_WEB_04

./: .envexample  Dockerfile  README.md  error.html  index.html  main.py  message.html  messageform.js  pyproject.toml  style.css  test.js
src/pages/: index.html
src/storage/: data.json
storage/: data.json
templates/: blog.html
