[tool.poetry]
name = "py-web-04"
version = "0.1.0"
description = ""
authors = ["siracencoserghei <siracencoserghei@gmail.com>"]
readme = "README.md"
packages = [{include = "py_web_04"}]

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
