[tool.poetry]
name = "py-web-04"
version = "0.1.0"
description = ""
authors = ["siracencoserghei <siracencoserghei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
